src/antlr4/LAParser.cpp

// Generated from LA.g4 by ANTLR 4.9.1



#include "LAParser.h"


using namespace antlrcpp;
using namespace antlr4;

LAParser::LAParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

LAParser::~LAParser() {
  delete _interpreter;
}

std::string LAParser::getGrammarFileName() const {
  return "LA.g4";
}

const std::vector<std::string>& LAParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& LAParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramaContext ------------------------------------------------------------------

LAParser::ProgramaContext::ProgramaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LAParser::DeclaracoesContext* LAParser::ProgramaContext::declaracoes() {
  return getRuleContext<LAParser::DeclaracoesContext>(0);
}

LAParser::CorpoContext* LAParser::ProgramaContext::corpo() {
  return getRuleContext<LAParser::CorpoContext>(0);
}


size_t LAParser::ProgramaContext::getRuleIndex() const {
  return LAParser::RulePrograma;
}


LAParser::ProgramaContext* LAParser::programa() {
  ProgramaContext *_localctx = _tracker.createInstance<ProgramaContext>(_ctx, getState());
  enterRule(_localctx, 0, LAParser::RulePrograma);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    declaracoes();
    setState(101);
    match(LAParser::T__0);
    setState(102);
    corpo();
    setState(103);
    match(LAParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclaracoesContext ------------------------------------------------------------------

LAParser::DeclaracoesContext::DeclaracoesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LAParser::Decl_local_globalContext *> LAParser::DeclaracoesContext::decl_local_global() {
  return getRuleContexts<LAParser::Decl_local_globalContext>();
}

LAParser::Decl_local_globalContext* LAParser::DeclaracoesContext::decl_local_global(size_t i) {
  return getRuleContext<LAParser::Decl_local_globalContext>(i);
}


size_t LAParser::DeclaracoesContext::getRuleIndex() const {
  return LAParser::RuleDeclaracoes;
}


LAParser::DeclaracoesContext* LAParser::declaracoes() {
  DeclaracoesContext *_localctx = _tracker.createInstance<DeclaracoesContext>(_ctx, getState());
  enterRule(_localctx, 2, LAParser::RuleDeclaracoes);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LAParser::T__2)
      | (1ULL << LAParser::T__3)
      | (1ULL << LAParser::T__5)
      | (1ULL << LAParser::T__15)
      | (1ULL << LAParser::T__17))) != 0)) {
      setState(105);
      decl_local_global();
      setState(110);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Decl_local_globalContext ------------------------------------------------------------------

LAParser::Decl_local_globalContext::Decl_local_globalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LAParser::Declaracao_localContext* LAParser::Decl_local_globalContext::declaracao_local() {
  return getRuleContext<LAParser::Declaracao_localContext>(0);
}

LAParser::Declaracao_globalContext* LAParser::Decl_local_globalContext::declaracao_global() {
  return getRuleContext<LAParser::Declaracao_globalContext>(0);
}


size_t LAParser::Decl_local_globalContext::getRuleIndex() const {
  return LAParser::RuleDecl_local_global;
}


LAParser::Decl_local_globalContext* LAParser::decl_local_global() {
  Decl_local_globalContext *_localctx = _tracker.createInstance<Decl_local_globalContext>(_ctx, getState());
  enterRule(_localctx, 4, LAParser::RuleDecl_local_global);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(113);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LAParser::T__2:
      case LAParser::T__3:
      case LAParser::T__5: {
        enterOuterAlt(_localctx, 1);
        setState(111);
        declaracao_local();
        break;
      }

      case LAParser::T__15:
      case LAParser::T__17: {
        enterOuterAlt(_localctx, 2);
        setState(112);
        declaracao_global();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Declaracao_localContext ------------------------------------------------------------------

LAParser::Declaracao_localContext::Declaracao_localContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LAParser::VariavelContext* LAParser::Declaracao_localContext::variavel() {
  return getRuleContext<LAParser::VariavelContext>(0);
}

tree::TerminalNode* LAParser::Declaracao_localContext::IDENT() {
  return getToken(LAParser::IDENT, 0);
}

tree::TerminalNode* LAParser::Declaracao_localContext::DELIMITADOR() {
  return getToken(LAParser::DELIMITADOR, 0);
}

LAParser::Tipo_basicoContext* LAParser::Declaracao_localContext::tipo_basico() {
  return getRuleContext<LAParser::Tipo_basicoContext>(0);
}

LAParser::Valor_constanteContext* LAParser::Declaracao_localContext::valor_constante() {
  return getRuleContext<LAParser::Valor_constanteContext>(0);
}

LAParser::TipoContext* LAParser::Declaracao_localContext::tipo() {
  return getRuleContext<LAParser::TipoContext>(0);
}


size_t LAParser::Declaracao_localContext::getRuleIndex() const {
  return LAParser::RuleDeclaracao_local;
}


LAParser::Declaracao_localContext* LAParser::declaracao_local() {
  Declaracao_localContext *_localctx = _tracker.createInstance<Declaracao_localContext>(_ctx, getState());
  enterRule(_localctx, 6, LAParser::RuleDeclaracao_local);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(128);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LAParser::T__2: {
        enterOuterAlt(_localctx, 1);
        setState(115);
        match(LAParser::T__2);
        setState(116);
        variavel();
        break;
      }

      case LAParser::T__3: {
        enterOuterAlt(_localctx, 2);
        setState(117);
        match(LAParser::T__3);
        setState(118);
        match(LAParser::IDENT);
        setState(119);
        match(LAParser::DELIMITADOR);
        setState(120);
        tipo_basico();
        setState(121);
        match(LAParser::T__4);
        setState(122);
        valor_constante();
        break;
      }

      case LAParser::T__5: {
        enterOuterAlt(_localctx, 3);
        setState(124);
        match(LAParser::T__5);
        setState(125);
        match(LAParser::IDENT);
        setState(126);
        match(LAParser::DELIMITADOR);
        setState(127);
        tipo();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariavelContext ------------------------------------------------------------------

LAParser::VariavelContext::VariavelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LAParser::IdentificadorContext *> LAParser::VariavelContext::identificador() {
  return getRuleContexts<LAParser::IdentificadorContext>();
}

LAParser::IdentificadorContext* LAParser::VariavelContext::identificador(size_t i) {
  return getRuleContext<LAParser::IdentificadorContext>(i);
}

tree::TerminalNode* LAParser::VariavelContext::DELIMITADOR() {
  return getToken(LAParser::DELIMITADOR, 0);
}

LAParser::TipoContext* LAParser::VariavelContext::tipo() {
  return getRuleContext<LAParser::TipoContext>(0);
}

std::vector<tree::TerminalNode *> LAParser::VariavelContext::VIRGULA() {
  return getTokens(LAParser::VIRGULA);
}

tree::TerminalNode* LAParser::VariavelContext::VIRGULA(size_t i) {
  return getToken(LAParser::VIRGULA, i);
}


size_t LAParser::VariavelContext::getRuleIndex() const {
  return LAParser::RuleVariavel;
}


LAParser::VariavelContext* LAParser::variavel() {
  VariavelContext *_localctx = _tracker.createInstance<VariavelContext>(_ctx, getState());
  enterRule(_localctx, 8, LAParser::RuleVariavel);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    identificador();
    setState(135);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LAParser::VIRGULA) {
      setState(131);
      match(LAParser::VIRGULA);
      setState(132);
      identificador();
      setState(137);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(138);
    match(LAParser::DELIMITADOR);
    setState(139);
    tipo();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentificadorContext ------------------------------------------------------------------

LAParser::IdentificadorContext::IdentificadorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> LAParser::IdentificadorContext::IDENT() {
  return getTokens(LAParser::IDENT);
}

tree::TerminalNode* LAParser::IdentificadorContext::IDENT(size_t i) {
  return getToken(LAParser::IDENT, i);
}

LAParser::DimensaoContext* LAParser::IdentificadorContext::dimensao() {
  return getRuleContext<LAParser::DimensaoContext>(0);
}

std::vector<tree::TerminalNode *> LAParser::IdentificadorContext::PONTO() {
  return getTokens(LAParser::PONTO);
}

tree::TerminalNode* LAParser::IdentificadorContext::PONTO(size_t i) {
  return getToken(LAParser::PONTO, i);
}


size_t LAParser::IdentificadorContext::getRuleIndex() const {
  return LAParser::RuleIdentificador;
}


LAParser::IdentificadorContext* LAParser::identificador() {
  IdentificadorContext *_localctx = _tracker.createInstance<IdentificadorContext>(_ctx, getState());
  enterRule(_localctx, 10, LAParser::RuleIdentificador);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(141);
    match(LAParser::IDENT);
    setState(146);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LAParser::PONTO) {
      setState(142);
      match(LAParser::PONTO);
      setState(143);
      match(LAParser::IDENT);
      setState(148);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(149);
    dimensao();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DimensaoContext ------------------------------------------------------------------

LAParser::DimensaoContext::DimensaoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> LAParser::DimensaoContext::ABRE_COL() {
  return getTokens(LAParser::ABRE_COL);
}

tree::TerminalNode* LAParser::DimensaoContext::ABRE_COL(size_t i) {
  return getToken(LAParser::ABRE_COL, i);
}

std::vector<LAParser::Exp_aritmeticaContext *> LAParser::DimensaoContext::exp_aritmetica() {
  return getRuleContexts<LAParser::Exp_aritmeticaContext>();
}

LAParser::Exp_aritmeticaContext* LAParser::DimensaoContext::exp_aritmetica(size_t i) {
  return getRuleContext<LAParser::Exp_aritmeticaContext>(i);
}

std::vector<tree::TerminalNode *> LAParser::DimensaoContext::FECHA_COL() {
  return getTokens(LAParser::FECHA_COL);
}

tree::TerminalNode* LAParser::DimensaoContext::FECHA_COL(size_t i) {
  return getToken(LAParser::FECHA_COL, i);
}


size_t LAParser::DimensaoContext::getRuleIndex() const {
  return LAParser::RuleDimensao;
}


LAParser::DimensaoContext* LAParser::dimensao() {
  DimensaoContext *_localctx = _tracker.createInstance<DimensaoContext>(_ctx, getState());
  enterRule(_localctx, 12, LAParser::RuleDimensao);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(157);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LAParser::ABRE_COL) {
      setState(151);
      match(LAParser::ABRE_COL);
      setState(152);
      exp_aritmetica();
      setState(153);
      match(LAParser::FECHA_COL);
      setState(159);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TipoContext ------------------------------------------------------------------

LAParser::TipoContext::TipoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LAParser::RegistroContext* LAParser::TipoContext::registro() {
  return getRuleContext<LAParser::RegistroContext>(0);
}

LAParser::Tipo_estendidoContext* LAParser::TipoContext::tipo_estendido() {
  return getRuleContext<LAParser::Tipo_estendidoContext>(0);
}


size_t LAParser::TipoContext::getRuleIndex() const {
  return LAParser::RuleTipo;
}


LAParser::TipoContext* LAParser::tipo() {
  TipoContext *_localctx = _tracker.createInstance<TipoContext>(_ctx, getState());
  enterRule(_localctx, 14, LAParser::RuleTipo);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(162);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LAParser::T__13: {
        enterOuterAlt(_localctx, 1);
        setState(160);
        registro();
        break;
      }

      case LAParser::T__6:
      case LAParser::T__7:
      case LAParser::T__8:
      case LAParser::T__9:
      case LAParser::T__10:
      case LAParser::IDENT: {
        enterOuterAlt(_localctx, 2);
        setState(161);
        tipo_estendido();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Tipo_basicoContext ------------------------------------------------------------------

LAParser::Tipo_basicoContext::Tipo_basicoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LAParser::Tipo_basicoContext::getRuleIndex() const {
  return LAParser::RuleTipo_basico;
}


LAParser::Tipo_basicoContext* LAParser::tipo_basico() {
  Tipo_basicoContext *_localctx = _tracker.createInstance<Tipo_basicoContext>(_ctx, getState());
  enterRule(_localctx, 16, LAParser::RuleTipo_basico);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(164);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LAParser::T__6)
      | (1ULL << LAParser::T__7)
      | (1ULL << LAParser::T__8)
      | (1ULL << LAParser::T__9))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Tipo_basico_identContext ------------------------------------------------------------------

LAParser::Tipo_basico_identContext::Tipo_basico_identContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LAParser::Tipo_basicoContext* LAParser::Tipo_basico_identContext::tipo_basico() {
  return getRuleContext<LAParser::Tipo_basicoContext>(0);
}

tree::TerminalNode* LAParser::Tipo_basico_identContext::IDENT() {
  return getToken(LAParser::IDENT, 0);
}


size_t LAParser::Tipo_basico_identContext::getRuleIndex() const {
  return LAParser::RuleTipo_basico_ident;
}


LAParser::Tipo_basico_identContext* LAParser::tipo_basico_ident() {
  Tipo_basico_identContext *_localctx = _tracker.createInstance<Tipo_basico_identContext>(_ctx, getState());
  enterRule(_localctx, 18, LAParser::RuleTipo_basico_ident);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(168);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LAParser::T__6:
      case LAParser::T__7:
      case LAParser::T__8:
      case LAParser::T__9: {
        enterOuterAlt(_localctx, 1);
        setState(166);
        tipo_basico();
        break;
      }

      case LAParser::IDENT: {
        enterOuterAlt(_localctx, 2);
        setState(167);
        match(LAParser::IDENT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Tipo_estendidoContext ------------------------------------------------------------------

LAParser::Tipo_estendidoContext::Tipo_estendidoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LAParser::Tipo_basico_identContext* LAParser::Tipo_estendidoContext::tipo_basico_ident() {
  return getRuleContext<LAParser::Tipo_basico_identContext>(0);
}


size_t LAParser::Tipo_estendidoContext::getRuleIndex() const {
  return LAParser::RuleTipo_estendido;
}


LAParser::Tipo_estendidoContext* LAParser::tipo_estendido() {
  Tipo_estendidoContext *_localctx = _tracker.createInstance<Tipo_estendidoContext>(_ctx, getState());
  enterRule(_localctx, 20, LAParser::RuleTipo_estendido);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(171);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LAParser::T__10) {
      setState(170);
      match(LAParser::T__10);
    }
    setState(173);
    tipo_basico_ident();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Valor_constanteContext ------------------------------------------------------------------

LAParser::Valor_constanteContext::Valor_constanteContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LAParser::Valor_constanteContext::CADEIA() {
  return getToken(LAParser::CADEIA, 0);
}

tree::TerminalNode* LAParser::Valor_constanteContext::NUM_INT() {
  return getToken(LAParser::NUM_INT, 0);
}

tree::TerminalNode* LAParser::Valor_constanteContext::NUM_REAL() {
  return getToken(LAParser::NUM_REAL, 0);
}


size_t LAParser::Valor_constanteContext::getRuleIndex() const {
  return LAParser::RuleValor_constante;
}


LAParser::Valor_constanteContext* LAParser::valor_constante() {
  Valor_constanteContext *_localctx = _tracker.createInstance<Valor_constanteContext>(_ctx, getState());
  enterRule(_localctx, 22, LAParser::RuleValor_constante);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(175);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LAParser::T__11)
      | (1ULL << LAParser::T__12)
      | (1ULL << LAParser::NUM_INT)
      | (1ULL << LAParser::NUM_REAL)
      | (1ULL << LAParser::CADEIA))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RegistroContext ------------------------------------------------------------------

LAParser::RegistroContext::RegistroContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LAParser::VariavelContext *> LAParser::RegistroContext::variavel() {
  return getRuleContexts<LAParser::VariavelContext>();
}

LAParser::VariavelContext* LAParser::RegistroContext::variavel(size_t i) {
  return getRuleContext<LAParser::VariavelContext>(i);
}


size_t LAParser::RegistroContext::getRuleIndex() const {
  return LAParser::RuleRegistro;
}


LAParser::RegistroContext* LAParser::registro() {
  RegistroContext *_localctx = _tracker.createInstance<RegistroContext>(_ctx, getState());
  enterRule(_localctx, 24, LAParser::RuleRegistro);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(177);
    match(LAParser::T__13);
    setState(181);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LAParser::IDENT) {
      setState(178);
      variavel();
      setState(183);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(184);
    match(LAParser::T__14);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Declaracao_globalContext ------------------------------------------------------------------

LAParser::Declaracao_globalContext::Declaracao_globalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LAParser::Declaracao_globalContext::IDENT() {
  return getToken(LAParser::IDENT, 0);
}

tree::TerminalNode* LAParser::Declaracao_globalContext::ABRE_PAR() {
  return getToken(LAParser::ABRE_PAR, 0);
}

tree::TerminalNode* LAParser::Declaracao_globalContext::FECHA_PAR() {
  return getToken(LAParser::FECHA_PAR, 0);
}

LAParser::ParametrosContext* LAParser::Declaracao_globalContext::parametros() {
  return getRuleContext<LAParser::ParametrosContext>(0);
}

std::vector<LAParser::Declaracao_localContext *> LAParser::Declaracao_globalContext::declaracao_local() {
  return getRuleContexts<LAParser::Declaracao_localContext>();
}

LAParser::Declaracao_localContext* LAParser::Declaracao_globalContext::declaracao_local(size_t i) {
  return getRuleContext<LAParser::Declaracao_localContext>(i);
}

std::vector<LAParser::CmdContext *> LAParser::Declaracao_globalContext::cmd() {
  return getRuleContexts<LAParser::CmdContext>();
}

LAParser::CmdContext* LAParser::Declaracao_globalContext::cmd(size_t i) {
  return getRuleContext<LAParser::CmdContext>(i);
}

tree::TerminalNode* LAParser::Declaracao_globalContext::DELIMITADOR() {
  return getToken(LAParser::DELIMITADOR, 0);
}

LAParser::Tipo_estendidoContext* LAParser::Declaracao_globalContext::tipo_estendido() {
  return getRuleContext<LAParser::Tipo_estendidoContext>(0);
}


size_t LAParser::Declaracao_globalContext::getRuleIndex() const {
  return LAParser::RuleDeclaracao_global;
}


LAParser::Declaracao_globalContext* LAParser::declaracao_global() {
  Declaracao_globalContext *_localctx = _tracker.createInstance<Declaracao_globalContext>(_ctx, getState());
  enterRule(_localctx, 26, LAParser::RuleDeclaracao_global);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(229);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LAParser::T__15: {
        enterOuterAlt(_localctx, 1);
        setState(186);
        match(LAParser::T__15);
        setState(187);
        match(LAParser::IDENT);
        setState(188);
        match(LAParser::ABRE_PAR);
        setState(190);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == LAParser::T__19
